Fix bottom of Hunter Gatherer page white space

--- a/css/project.css
+++ b/css/project.css
@@ -1,19 +1,28 @@
 body{
     font-size: 12px !important;
+    overflow: hidden;
+    background-color: #333 !important;
+    min-width: 320px;
+    min-height: 453px;
 }
 strong {
     font-weight: bold !important;
 }
 
+#page-container {
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+#background-frame {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+}
 #page {
     width: 100%;
-    overflow: hidden;
-    background-color: #333;
-    height: calc(100% - 10);
-    min-width: 320px;
-    min-height: 453px;
-}
 
+}
 #pp-container {
     margin-top: 80px;
     margin-bottom: 30px;
